--- a/index.html
+++ b/index.html
@@ -5,8 +5,175 @@
     <title>HTML Academy: Нёрдс</title>
   </head>
   <body>
-
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS, уровень 1</a>».</p>
-
+  <header>
+    <nav>
+      <a href="#"><img src="https://via.placeholder.com/160x65" alt="Логотип Nerds"></a>
+      <ul>
+        <li><a href="#">Студия</a></li>
+        <li><a href="#">Клиенты</a></li>
+        <li><a href="catalog.html">Магазин</a></li>
+        <li><a href="#">Контакты</a></li>
+      </ul>
+      <ul>
+        <li><a href="#">Корзина</a></li>
+      </ul>
+    </nav>
+  </header>
+  <main>
+      <section class="slider">
+      <input type="radio" checked="">
+      <input type="radio">
+      <input type="radio">
+      <ul>
+        <li>
+          <section>
+            <h3>Долго, дорого,<br> скрупулезно</h3>
+            <p>Математически выверенный дизайн<br> для вашего сайта или мобильного приложения.</p>
+            <a href="#">Узнать больше</a>
+          </section>
+        </li>
+        <li>
+          <section>
+            <h3>Любим математику<br> как никто другой</h3>
+            <p>Никакого креатива, только математические формулы<br> для расчета идеальных пропорций.</p>
+            <a href="#">Узнать больше</a>
+          </section>
+        </li>
+        <li>
+          <section>
+            <h3>Только ночь,<br> только хардкор</h3>
+            <p>Работать днем, как все? Мы против этого.<br> Ближе к полуночи работа только начинается.</p>
+            <a href="#">Узнать больше</a>
+          </section>
+        </li>
+      </ul>
+          </section>
+    <section>
+       <ul>
+        <li>
+          <section>
+            <h3>Веб-сайты</h3>
+            <p>Мир никогда не будет прежним после того как увидит ваш сайт!</p>
+            <a href="#">Заказать</a>
+          </section>
+        </li>
+        <li>
+          <section>
+            <h3>Приложения</h3>
+            <p>Покорите топ-10 приложений в AppStore и Google Play</p>
+            <a href="#">Заказать</a>
+          </section>
+        </li>
+        <li>
+          <section>
+            <h3>Презентации</h3>
+            <p>Вы даже не подозреваете, насколько вы изумительны</p>
+            <a href="#">Заказать</a>
+          </section>
+        </li>
+      </ul>
+    </section>
+    <section>
+       <div>
+        <div>
+          <b>Мы — маленькая, но гордая дизайн-студия из Краснодара.</b>
+          <p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креатива. Работаем не покладая рук, как роботы.</p>
+        </div>
+        <img src="https://via.placeholder.com/360x208" alt="Лого">
+      </div>
+      <div>
+        <div>
+          <span>Выполняем заказы на разработку:</span>
+          <ul>
+            <li>Веб-сайтов любой сложности</li>
+            <li>Мобильных приложений для iOS и Android</li>
+            <li>Слайдшоу и видео для корпоративных презентаций</li>
+          </ul>
+        </div>
+        <div>
+          <span>C 2004 года любим точность во всем:</span>
+          <table>
+            <tbody>
+            <tr>
+              <td>146<span>%</span></td>
+              <td>100<span>%</span></td>
+              <td>50<span>%</span></td>
+            </tr>
+            <tr>
+              <th>Уровень самоотдачи</th>
+              <th>Cоблюдение сроков</th>
+              <th>Минимальная предоплата</th>
+            </tr>
+            </tbody></table>
+        </div>
+      </div>
+    </section>
+    <section>
+       <ul>
+        <li>
+          <a href="#"><img src="https://via.placeholder.com/199x68" alt="HTML Academy"></a>
+        </li>
+        <li>
+          <a href="#"><img src="https://via.placeholder.com/209x90" alt="Borodinskiy"></a>
+        </li>
+        <li>
+          <a href="#"><img src="https://via.placeholder.com/185x52" alt="Pink"></a>
+        </li>
+        <li>
+          <a href="#"><img src="https://via.placeholder.com/173x84" alt="Mishka"></a>
+        </li>
+      </ul>
+    </section>
+  </main>
+  <footer>
+    <section >
+       <div>
+        <div>
+          <b>Nёrds design studio</b>
+          <p>191186, Санкт-Петербург,<br> ул. Б. Конюшенная, д. 19/8</p>
+          <p>тел. +7 (812) 275-75-75</p>
+          <a href="#">Напишите нам</a>
+        </div>
+      </div>
+      <iframe src="https://www.google.com/maps/..."></iframe>
+    </section>
+    <section>
+       <ul>
+        <li>
+          <a href="#"><span>Вконтакте</span></a>
+        </li>
+        <li>
+          <a href="#"><span>Фейсбук</span></a>
+        </li>
+        <li>
+          <a href="#"><span>Инстаграм</span></a>
+        </li>
+      </ul>
+      <div>
+        <b>Давайте дружить, это выгодно!</b>
+        <p>Скидка 10% для друзей из социальных сетей.</p>
+      </div>
+    </section>
+  </footer>
+  <section>
+    <form>
+      <div>
+        <p>
+          <label>Ваше имя:</label>
+          <input type="text" name="feedback-name" placeholder="Имя Фамилия" id="feedback-name">
+        </p>
+        <p>
+          <label>Ваш e-mail:</label>
+          <input type="email" name="feedback-email" placeholder="email@example.com" id="feedback-email">
+        </p>
+      </div>
+      <p>
+        <label>Текст письма:</label>
+        <textarea name="feedback-text" placeholder="В свободной форме" id="feedback-text"></textarea>
+      </p>
+      <button type="submit">Отправить</button>
+    </form>
+    <button type="button"><span>Закрыть окно</span></button>
+  </section>
   </body>
 </html>
