--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="ru" xmlns="http://www.w3.org/1999/html">
   <head>
     <meta charset="utf-8">
-    <title>HTML Academy: Нёрдс</title>
+    <title>Главная - Нёрдс</title>
+    <link rel="shortcut icon" href="favicon.ico" type="type="image/vnd.microsoft.icon">
   </head>
   <body>
   <header>
+    <div class="wrapper">
     <nav>
-      <a href="#"><img src="https://via.placeholder.com/160x65" alt="Логотип Nerds"></a>
+      <a href="index.html"><img src="https://via.placeholder.com/160x65" alt="Логотип Nerds"></a>
       <ul>
         <li><a href="#">Студия</a></li>
         <li><a href="#">Клиенты</a></li>
@@ -18,72 +20,60 @@
         <li><a href="#">Корзина</a></li>
       </ul>
     </nav>
+    </div>
   </header>
   <main>
+    <div class="wrapper">
+    <!-- присвоим background`у цвет в div -->
+    <div>
       <section class="slider">
-      <input type="radio" checked="">
-      <input type="radio">
-      <input type="radio">
-      <ul>
-        <li>
-          <section>
-            <h3>Долго, дорого,<br> скрупулезно</h3>
+        <h2 class="visually-hidden">Преимущества</h2>
+        <div>
+            <span>Долго, дорого,скрупулезно</span>
             <p>Математически выверенный дизайн<br> для вашего сайта или мобильного приложения.</p>
             <a href="#">Узнать больше</a>
-          </section>
-        </li>
-        <li>
-          <section>
-            <h3>Любим математику<br> как никто другой</h3>
-            <p>Никакого креатива, только математические формулы<br> для расчета идеальных пропорций.</p>
-            <a href="#">Узнать больше</a>
-          </section>
-        </li>
-        <li>
-          <section>
-            <h3>Только ночь,<br> только хардкор</h3>
-            <p>Работать днем, как все? Мы против этого.<br> Ближе к полуночи работа только начинается.</p>
-            <a href="#">Узнать больше</a>
-          </section>
-        </li>
-      </ul>
-          </section>
-    <section>
-       <ul>
-        <li>
-          <section>
-            <h3>Веб-сайты</h3>
-            <p>Мир никогда не будет прежним после того как увидит ваш сайт!</p>
-            <a href="#">Заказать</a>
-          </section>
-        </li>
-        <li>
-          <section>
-            <h3>Приложения</h3>
-            <p>Покорите топ-10 приложений в AppStore и Google Play</p>
-            <a href="#">Заказать</a>
-          </section>
-        </li>
-        <li>
-          <section>
-            <h3>Презентации</h3>
-            <p>Вы даже не подозреваете, насколько вы изумительны</p>
-            <a href="#">Заказать</a>
-          </section>
-        </li>
-      </ul>
-    </section>
-    <section>
-       <div>
-        <div>
-          <b>Мы — маленькая, но гордая дизайн-студия из Краснодара.</b>
-          <p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креатива. Работаем не покладая рук, как роботы.</p>
         </div>
-        <img src="https://via.placeholder.com/360x208" alt="Лого">
+        <div>
+          <span>Любим математику как никто другой</span>
+          <p>Никакого креатива, только математические формулы для расчета идеальных пропорций</p>
+          <a href="#">Узнать больше</a>
+        </div>
+        <div>
+          <span>Только ночь, только хардкор</span>
+          <p>Работать днем, как все? Мы против этого. Ближе к полуночи работа только начинается.</p>
+          <a href="#">Узнать больше</a>
+        </div>
+        <button type="button" aria-label="Первый слайд"></button>
+        <button type="button" aria-label="Второй слайд"></button>
+        <button type="button" aria-label="Третий слайд"></button>
+      </section>
+    </div>
+    <div>
+      <div>
+        <div>
+          <img src="img/illustration-1.png" alt="Веб-сайты" width="300" height="146">
+          <h3>Веб-сайты</h3>
+          <p>Мир никогда не будет прежним, после того, как увидит ваш сайт</p>
+          <a href="#">Заказать</a>
+        </div>
+        <div>
+          <img src="img/illustration-2.png" alt="Веб-сайты" width="300" height="146">
+          <h3>Приложения</h3>
+          <p>Покорите топ-10 приложений в AppStore и Google Play</p>
+          <a href="#">Заказать</a>
+        </div>
+        <div>
+          <img src="img/illustration-3.png" alt="Веб-сайты" width="300" height="146">
+          <h3>Презентации</h3>
+          <p>Вы даже не подозреваете, насколько вы изумительны!</p>
+          <a href="#">Заказать</a>
+        </div>
       </div>
       <div>
         <div>
-          <span>Выполняем заказы на разработку:</span>
+          <h2>Мы — маленькая, но гордая дизайн-студия из Краснодара.</h2>
+          <p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креатива. Работаем не покладая рук, как роботы.</p>
+          <h3>Выполняем заказы на разработку:</h3>
           <ul>
             <li>Веб-сайтов любой сложности</li>
             <li>Мобильных приложений для iOS и Android</li>
@@ -91,42 +81,37 @@
           </ul>
         </div>
         <div>
-          <span>C 2004 года любим точность во всем:</span>
+          <div>
+            <img src="img/nerds-illustration.png" alt="Логотип">
+          </div>
+          <span>C 2004 года любим точность во всем</span>
           <table>
-            <tbody>
             <tr>
-              <td>146<span>%</span></td>
-              <td>100<span>%</span></td>
-              <td>50<span>%</span></td>
+              <th>146<sup>%</sup></th>
+              <th>100<sup>%</sup></th>
+              <th>50<sup>%</sup></th>
             </tr>
             <tr>
-              <th>Уровень самоотдачи</th>
-              <th>Cоблюдение сроков</th>
-              <th>Минимальная предоплата</th>
+              <td>Уровень самоотдачи</td>
+              <td>Соблюдение сроков</td>
+              <td>Минимальная предоплата</td>
             </tr>
-            </tbody></table>
+          </table>
         </div>
       </div>
-    </section>
-    <section>
-       <ul>
-        <li>
-          <a href="#"><img src="https://via.placeholder.com/199x68" alt="HTML Academy"></a>
-        </li>
-        <li>
-          <a href="#"><img src="https://via.placeholder.com/209x90" alt="Borodinskiy"></a>
-        </li>
-        <li>
-          <a href="#"><img src="https://via.placeholder.com/185x52" alt="Pink"></a>
-        </li>
-        <li>
-          <a href="#"><img src="https://via.placeholder.com/173x84" alt="Mishka"></a>
-        </li>
-      </ul>
-    </section>
+      <div>
+        <a href="https://htmlacademy.ru/intensive/htmlcss"><img src="img/logo-1.png" alt="Академия" width="199" height="68"></a>
+        <a href="#"><img src="img/logo-2.png" alt="Бородинский" width="209" height="90"></a>
+        <a href="#"><img src="img/logo-3.png" alt="Пинк" width="185" height="52"></a>
+        <a href="#"><img src="img/logo-4.png" alt="Мишка" width="173" height="84"></a>
+      </div>
+    </div>
+    </div>
   </main>
   <footer>
-    <section >
+    <div class="wrapper">
+    <section>
+      <h2 class="visually-hidden">Контакты</h2>
        <div>
         <div>
           <b>Nёrds design studio</b>
@@ -138,6 +123,7 @@
       <iframe src="https://www.google.com/maps/..."></iframe>
     </section>
     <section>
+      <h2 class="visually-hidden">Мы в социальных сетях</h2>
        <ul>
         <li>
           <a href="#"><span>Вконтакте</span></a>
@@ -154,8 +140,10 @@
         <p>Скидка 10% для друзей из социальных сетей.</p>
       </div>
     </section>
+    </div>
   </footer>
   <section>
+    <h2>Напишите нам</h2>
     <form>
       <div>
         <p>
