--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <header>
     <div class="wrapper">
     <nav>
-      <a href="index.html"><img src="https://via.placeholder.com/160x65" alt="Логотип Nerds"></a>
+      <a href="index.html"><img src="img/nerds-logo.svg" alt="Логотип Nerds"></a>
       <ul>
         <li><a href="#">Студия</a></li>
         <li><a href="#">Клиенты</a></li>
