--- a/Catalog.html
+++ b/Catalog.html
@@ -8,7 +8,7 @@
 <header>
   <div class="wrapper">
   <nav>
-    <a href="index.html"><img src="https://via.placeholder.com/160x65" alt="Логотип Nerds"></a>
+    <a href="index.html"><img src="img/nerds-logo.svg" alt="Логотип Nerds"></a>
     <ul>
       <li><a href="#">Студия</a></li>
       <li><a href="#">Клиенты</a></li>
@@ -22,11 +22,170 @@
   </div>
 </header>
 <main>
-
+  <div class="wrapper">
+    <section>
+      <h2 class="visually-hidden">Фильтр</h2>
+      <form>
+        <fieldset>
+          <legend>Стоимость:</legend>
+          <div>
+              <label>от <input name="min-price" type="text" value="0"></label>
+              <label>до <input name="max-price" type="text" value="15000"></label>
+          </div>
+        </fieldset>
+        <fieldset>
+          <legend>Сетка</legend>
+          <ul>
+            <li>
+              <label>
+                <input type="radio" checked>
+                Адаптивная
+              </label>
+            </li>
+            <li>
+              <label>
+                <input type="radio">
+                Фиксированная
+              </label>
+            </li>
+            <li>
+              <label>
+                <input type="radio">
+                Резиновая
+              </label>
+            </li>
+          </ul>
+        </fieldset>
+        <fieldset>
+          <legend>Особенности:</legend>
+          <ul>
+            <li
+              <label>
+                <input type="checkbox" checked>
+                Слайдер
+              </label>
+            </li>
+            <li>
+              <label>
+                <input type="checkbox">
+                Блок преимуществ
+              </label>
+            </li>
+            <li>
+              <label>
+                <input type="checkbox" checked>
+                Новости
+              </label>
+            </li>
+            <li>
+              <label>
+                <input type="checkbox">
+                Галерея
+              </label>
+            </li>
+            <li>
+              <label>
+                <input type="checkbox">
+                Корзина
+              </label>
+            </li>
+          </ul>
+        </fieldset>
+        <button type="submit">Показать</button>
+      </form>
+    </section>
+  <section>
+    <h2 class="visually-hidden">Готовые шаблоны</h2>
+    <div>
+      <h2>Сортировать:</h2>
+      <ul>
+        <li><a href="#">По цене</a></li>
+        <li><a href="#">По типу</a></li>
+        <li><a href="#">По названию</a></li>
+      </ul>
+      <p>
+        <a href="#" aria-label="Меньще"><img src="img/icon-sort1.svg"></a>
+        <a href="#" aria-label="Больше"><img src="img/icon-sort2.svg"></a>
+      </p>
+    </div>
+    <!-- Каталог -->
+    <div>
+      <!-- Шаблон -->
+      <div>
+        <a href="#">
+          <img src="img/img-sedona.jpg" width="358" height="578" alt="Шаблон Sedona">
+        </a>
+        <!-- Popup -->
+        <div>
+          <a href="#"><h3>Sedona</h3></a>
+          <p>Информационный сайт для туристов</p>
+          <a href="#">9 900 руб.</a>
+        </div>
+      </div>
+      <div>
+        <a href="#">
+          <img src="img/img-pink.jpg" width="358" height="578" alt="Шаблон Pink">
+        </a>
+        <div>
+          <a href="#"><h3>Pink App</h3></a>
+          <p>Продуктовый лендинг приложения для iOS и Android</p>
+          <a href="#">9 900 руб.</a>
+        </div>
+      </div>
+      <div>
+        <a href="#">
+          <img src="img/img-barbershop.jpg" width="358" height="578" alt="Шаблон Barbershop">
+        </a>
+        <div>
+          <a href="#"><h3>Barbershop</h3></a>
+          <p>Сайт салона красоты. Для мужчин, да.</p>
+          <a href="#">9 900 руб.</a>
+        </div>
+      </div>
+      <div>
+        <a href="#">
+          <img src="img/img-mishka.jpg" width="358" height="578" alt="Шаблон Mishka">
+        </a>
+        <div>
+          <a href="#"><h3>Mishka</h3></a>
+          <p>Интернет-магазин вязаных игрушек.</p>
+          <a href="#">9 900 руб.</a>
+        </div>
+      </div>
+      <div>
+        <a href="#">
+          <img src="img/img-aplus.jpg" width="358" height="578" alt="Шаблон A+">
+        </a>
+        <div>
+          <a href="#"><h3>A Plus</h3></a>
+          <p>Лендинг курсов повышения квалификации</p>
+          <a href="#">9 900 руб.</a>
+        </div>
+      </div>
+      <div class=">
+        <a href="#">
+          <img src="img/img-kvast.jpg" width="358" height="578" alt="Шаблон Kvast">
+        </a>
+        <div>
+          <a href="#"><h3>Кваст</h3></a>
+          <p>Промо-сайт производителя крафтового кваса</p>
+          <a href="#">9 900 руб.</a>
+        </div>
+      </div>
+    </div>
+    <ul>
+      <li><a>1</a></li>
+      <li><a href="#">2</a></li>
+      <li><a href="#">3</a></li>
+      <li><a href="#">Следующая</a></li>
+    </ul>
+  </section>
+  </div>
 </main>
 <footer>
+  <div class="wrapper">
   <section >
-    <h2> class="visually-hidden">Контакты</h2>
+    <h2 class="visually-hidden">Контакты</h2>
     <div>
       <div>
         <b>Nёrds design studio</b>
@@ -55,6 +214,7 @@
       <p>Скидка 10% для друзей из социальных сетей.</p>
     </div>
   </section>
+  </div>
 </footer>
 <section>
   <h2>Напишите нам</h2>
