поправил catalog.html

--- a/Catalog.html
+++ b/Catalog.html
@@ -22,6 +22,11 @@
   </div>
 </header>
 <main>
+  <section>
+    <div>
+      <h1>Магазин готовых шаблонов</h1>
+    </div>
+  </section>
   <div class="wrapper">
     <section>
       <h2 class="visually-hidden">Фильтр</h2>
