--- a/Catalog.html
+++ b/Catalog.html
@@ -3,6 +3,9 @@
 <head>
   <meta charset="utf-8">
   <title>Магазин - Нёрдс</title>
+  <link rel="stylesheet" href="css/normalize.css">
+  <link href="style.css" type="text/css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&amp;subset=cyrillic" rel="stylesheet">
 </head>
 <body>
 <header>
