--- a/index.html
+++ b/index.html
@@ -4,88 +4,84 @@
     <meta charset="utf-8">
     <title>Главная - Нёрдс</title>
     <link rel="shortcut icon" href="favicon.ico" type="type="image/vnd.microsoft.icon">
+    <link rel="stylesheet" href="css/normalize.css">
+    <link href="css/style.css" type="text/css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&amp;subset=cyrillic" rel="stylesheet">
   </head>
   <body>
-  <header>
-    <div class="wrapper">
-    <nav>
-      <a href="index.html"><img src="img/nerds-logo.svg" alt="Логотип Nerds"></a>
-      <ul>
+  <header class="main-header">
+    <nav class="main-navigation wrapper">
+    <a href="index.html"><img src="img/nerds-logo.svg" class="logo" width="160" height="70" alt="Логотип Nerds"></a>
+      <ul class="site-navigation">
         <li><a href="#">Студия</a></li>
         <li><a href="#">Клиенты</a></li>
         <li><a href="catalog.html">Магазин</a></li>
         <li><a href="#">Контакты</a></li>
-      </ul>
-      <ul>
-        <li><a href="#">Корзина</a></li>
+        <li><a class="basket" href="#">Корзина</a></li>
       </ul>
     </nav>
-    </div>
   </header>
-  <main>
-    <div class="wrapper">
-    <!-- присвоим background`у цвет в div -->
+  <main class="wrapper">
     <div>
       <section class="slider">
         <h2 class="visually-hidden">Преимущества</h2>
         <div>
-            <span>Долго, дорого,скрупулезно</span>
+            <span class="slide-title">Долго, дорого,<br>скрупулезно</span>
             <p>Математически выверенный дизайн<br> для вашего сайта или мобильного приложения.</p>
-            <a href="#">Узнать больше</a>
+            <a class="button" href="#">Узнать больше</a>
         </div>
         <div>
-          <span>Любим математику как никто другой</span>
-          <p>Никакого креатива, только математические формулы для расчета идеальных пропорций</p>
-          <a href="#">Узнать больше</a>
+          <span class="slide-title">Любим математику<br> как никто другой</span>
+          <p>Никакого креатива, только математические формулы<br> для расчета идеальных пропорций</p>
+          <a class="button" href="#">Узнать больше</a>
         </div>
         <div>
-          <span>Только ночь, только хардкор</span>
-          <p>Работать днем, как все? Мы против этого. Ближе к полуночи работа только начинается.</p>
-          <a href="#">Узнать больше</a>
+          <span class="slide-title">Только ночь,<br> только хардкор</span>
+          <p>Работать днем, как все? Мы против этого.<br> Ближе к полуночи работа только начинается.</p>
+          <a class="button" href="#">Узнать больше</a>
         </div>
-        <button type="button" aria-label="Первый слайд"></button>
-        <button type="button" aria-label="Второй слайд"></button>
-        <button type="button" aria-label="Третий слайд"></button>
+        <button class="slider-button slider-button1 slider-button-active" type="button" aria-label="Первый слайд"></button>
+        <button class="slider-button slider-button2" type="button" aria-label="Второй слайд"></button>
+        <button class="slider-button slider-button3" type="button" aria-label="Третий слайд"></button>
       </section>
     </div>
-    <div>
-      <div>
-        <div>
+      <div class="services">
+        <div class="services-list-item">
           <img src="img/illustration-1.png" alt="Веб-сайты" width="300" height="146">
           <h3>Веб-сайты</h3>
-          <p>Мир никогда не будет прежним, после того, как увидит ваш сайт</p>
-          <a href="#">Заказать</a>
+          <p>Мир никогда не будет прежним<br> после того, как увидит ваш сайт</p>
+          <a class="button services-item-button red" href="#" class="button">Заказать</a>
         </div>
-        <div>
+        <div class="services-list-item">
           <img src="img/illustration-2.png" alt="Веб-сайты" width="300" height="146">
           <h3>Приложения</h3>
-          <p>Покорите топ-10 приложений в AppStore и Google Play</p>
-          <a href="#">Заказать</a>
+          <p>Покорите топ-10 приложений<br> в AppStore и Google Play</p>
+          <a href="#" class="button services-item-button green">Заказать</a>
         </div>
-        <div>
+        <div class="services-list-item">
           <img src="img/illustration-3.png" alt="Веб-сайты" width="300" height="146">
           <h3>Презентации</h3>
-          <p>Вы даже не подозреваете, насколько вы изумительны!</p>
-          <a href="#">Заказать</a>
+          <p>Вы даже не подозреваете,<br> насколько вы изумительны!</p>
+          <a href="#" class="button services-item-button yellow">Заказать</a>
         </div>
       </div>
+    <div class="features wrapper">
       <div>
-        <div>
-          <h2>Мы — маленькая, но гордая дизайн-студия из Краснодара.</h2>
-          <p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креатива. Работаем не покладая рук, как роботы.</p>
-          <h3>Выполняем заказы на разработку:</h3>
-          <ul>
-            <li>Веб-сайтов любой сложности</li>
-            <li>Мобильных приложений для iOS и Android</li>
-            <li>Слайдшоу и видео для корпоративных презентаций</li>
+          <h2 class="features-slogan">Мы — маленькая, но гордая дизайн-студия из Краснодара.</h2>
+          <p class="features-description">Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креатива. Работаем не покладая рук, как роботы.</p>
+          <span class="features-list-slogan">Выполняем заказы на разработку:</span>
+          <ul class="features-list">
+            <li class="features-item">Веб-сайтов любой сложности</li>
+            <li class="features-item">Мобильных приложений для iOS и Android</li>
+            <li class="features-item">Слайдшоу и видео для корпоративных презентаций</li>
           </ul>
         </div>
         <div>
           <div>
             <img src="img/nerds-illustration.png" alt="Логотип">
           </div>
-          <span>C 2004 года любим точность во всем</span>
-          <table>
+          <span class="table-list-slogan">C 2004 года любим точность во всем</span>
+          <table class="features-table">
             <tr>
               <th>146<sup>%</sup></th>
               <th>100<sup>%</sup></th>
@@ -99,7 +95,7 @@
           </table>
         </div>
       </div>
-      <div>
+      <div class="partners">
         <a href="https://htmlacademy.ru/intensive/htmlcss"><img src="img/logo-1.png" alt="Академия" width="199" height="68"></a>
         <a href="#"><img src="img/logo-2.png" alt="Бородинский" width="209" height="90"></a>
         <a href="#"><img src="img/logo-3.png" alt="Пинк" width="185" height="52"></a>
@@ -109,59 +105,57 @@
     </div>
   </main>
   <footer>
-    <div class="wrapper">
-    <section>
-      <h2 class="visually-hidden">Контакты</h2>
-       <div>
-        <div>
+    <div class="footer-map">
+      <img src="img/map.jpg" alt="Адрес">
+        <div class="footer-contacts">
           <b>Nёrds design studio</b>
           <p>191186, Санкт-Петербург,<br> ул. Б. Конюшенная, д. 19/8</p>
           <p>тел. +7 (812) 275-75-75</p>
-          <a href="#">Напишите нам</a>
+          <a href="#" class="button contacts-button">Напишите нам</a>
         </div>
+      <div class="map-marker">
+        <img src="img/map-marker.svg" alt"Мы здесь" width="231" height="190">
       </div>
-      <iframe src="https://www.google.com/maps/..."></iframe>
-    </section>
-    <section>
+    </div>
+    <section class="socials wrapper">
       <h2 class="visually-hidden">Мы в социальных сетях</h2>
-       <ul>
-        <li>
-          <a href="#"><span>Вконтакте</span></a>
+      <ul class="socials-list">
+        <li class="socials-item vkontakte">
+          <a href="#"><span class="visually-hidden">Вконтакте</span></a>
         </li>
-        <li>
-          <a href="#"><span>Фейсбук</span></a>
+        <li class="socials-item facebook">
+          <a href="#"><span class="visually-hidden">Фейсбук</span></a>
         </li>
-        <li>
-          <a href="#"><span>Инстаграм</span></a>
+        <li class="socials-item instagram">
+          <a href="#"><span class="visually-hidden">Инстаграм</span></a>
         </li>
       </ul>
-      <div>
-        <b>Давайте дружить, это выгодно!</b>
+      <div class="socials-discount">
+        <b class="socials-slogan">Давайте дружить, это выгодно!</b>
         <p>Скидка 10% для друзей из социальных сетей.</p>
       </div>
     </section>
-    </div>
   </footer>
-  <section>
-    <h2>Напишите нам</h2>
-    <form>
-      <div>
-        <p>
-          <label>Ваше имя:</label>
+  <section class="modal">
+    <h2 class="feedback-title">Напишите нам</h2>
+    <form class="feedback-form" action="https://echo.htmlacademy.ru" method="post">
+      <div class="feedback-container">
+        <p class="feedback-field feedback-name">
+          <label for="feedback-name">Ваше имя:</label>
           <input type="text" name="feedback-name" placeholder="Имя Фамилия" id="feedback-name">
         </p>
-        <p>
-          <label>Ваш e-mail:</label>
+        <p class="feedback-field feedback-email">
+          <label for="feedback-email">Ваш e-mail:</label>
           <input type="email" name="feedback-email" placeholder="email@example.com" id="feedback-email">
         </p>
       </div>
-      <p>
-        <label>Текст письма:</label>
+      <p class="feedback-field feedback-text">
+        <label for="feedback-text">Текст письма:</label>
         <textarea name="feedback-text" placeholder="В свободной форме" id="feedback-text"></textarea>
       </p>
-      <button type="submit">Отправить</button>
+      <button class="button feedback-button" type="submit">Отправить</button>
     </form>
-    <button type="button"><span>Закрыть окно</span></button>
+    <button class="modal-close" type="button"><span class="visually-hidden">Закрыть окно</span></button>
   </section>
   </body>
 </html>
