--- a/Catalog.html
+++ b/Catalog.html
@@ -139,7 +139,7 @@
           </a>
           <div class="catalog-popup">
             <a href="#"><h3 class="catalog-popup-caption">Sedona</h3></a>
-            <p>Информационный сайт для туристов</p>
+            <p>Информационный сайт<br> для туристов</p>
             <a href="#" class="button catalog-popup-button">9 900 руб.</a>
           </div>
         </div>
@@ -209,7 +209,7 @@
   </div>
   <div class="address-container">
     <h1 class="address-title">NЁRDS DESIGN STUDIO</h1>
-    <p class="address-text">91186, Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
+    <p class="address-text">191186, Санкт-Петербург,<br> ул. Б. Конюшенная, д. 19/8</p>
     <p class="address-phone">тел. +7 (812) 275-75-75</p>
     <a href="#" class="button contacts-button">Напишите нам</a>
   </div>
