--- a/Catalog.html
+++ b/Catalog.html
@@ -3,9 +3,10 @@
 <head>
   <meta charset="utf-8">
   <title>Магазин - Нёрдс</title>
-  <link rel="shortcut icon" href="favicon.ico" type="type="image/vnd.microsoft.icon">
+  <link rel="shortcut icon" href="favicon.ico" type="image/vnd.microsoft.icon">
   <link rel="stylesheet" href="css/normalize.css">
   <link href="css/style.css" type="text/css" rel="stylesheet">
+  <!--<link href="css/style.min.css" type="text/css" rel="stylesheet"> -->
   <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&amp;subset=cyrillic" rel="stylesheet">
 </head>
 <body>
@@ -26,6 +27,8 @@
       <div class="menu-user">
         <a class="basket" href="#">Корзина</a>
       </div>
+    </div>
+  </div>
 </header>
 <main>
     <h1 class="page-title">Магазин готовых шаблонов</h1>
@@ -135,7 +138,7 @@
       <div class="catalog-list">
         <div class="catalog-template">
           <a href="#">
-            <img src="img/img-sedona.jpg" width="360" height="576" alt="Шаблон Sedona">
+            <img src="img/img-sedona.jpg" width="359" height="578" alt="Шаблон Sedona">
           </a>
           <div class="catalog-popup">
             <a href="#"><h3 class="catalog-popup-caption">Sedona</h3></a>
@@ -145,7 +148,7 @@
         </div>
         <div class="catalog-template">
           <a href="#">
-            <img src="img/img-pink.jpg" width="360" height="576" alt="Шаблон Pink">
+            <img src="img/img-pink.jpg" width="358" height="578" alt="Шаблон Pink">
           </a>
           <div class="catalog-popup">
             <a href="#"><h3 class="catalog-popup-caption">Pink App</h3></a>
@@ -155,7 +158,7 @@
         </div>
         <div class="catalog-template">
           <a href="#">
-            <img src="img/img-barbershop.jpg" width="360" height="576" alt="Шаблон Barbershop">
+            <img src="img/img-barbershop.jpg" width=58 height="578" alt="Шаблон Barbershop">
           </a>
           <div class="catalog-popup">
             <a href="#"><h3 class="catalog-popup-caption">Barbershop</h3></a>
@@ -165,7 +168,7 @@
         </div>
         <div class="catalog-template">
           <a href="#">
-            <img src="img/img-mishka.jpg" width="360" height="576" alt="Шаблон Mishka">
+            <img src="img/img-mishka.jpg" width="359" height="578" alt="Шаблон Mishka">
           </a>
           <div class="catalog-popup">
             <a href="#"><h3 class="catalog-popup-caption">Mishka</h3></a>
@@ -175,7 +178,7 @@
         </div>
         <div class="catalog-template">
           <a href="#">
-            <img src="img/img-aplus.jpg" width="360" height="576" alt="Шаблон A+">
+            <img src="img/img-aplus.jpg" width="359" height="578" alt="Шаблон A+">
           </a>
           <div class="catalog-popup">
             <a href="#"><h3 class="catalog-popup-caption">A Plus</h3></a>
@@ -185,7 +188,7 @@
         </div>
         <div class="catalog-template">
           <a href="#">
-            <img src="img/img-kvast.jpg" width="360" height="576" alt="Шаблон Kvast">
+            <img src="img/img-kvast.jpg" width="359" height="578" alt="Шаблон Kvast">
           </a>
           <div class="catalog-popup">
             <a href="#"><h3 class="catalog-popup-caption">Кваст</h3></a>
@@ -244,6 +247,6 @@
     </div>
   </div>
 </div>
-<script src="js/modal.js"></script>
+<script src="js/modal.min.js"></script>
 </body>
 </html>
