--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html class="page" lang="ru" xmlns="http://www.w3.org/1999/html">
+<html lang="ru">
   <head>
     <meta charset="utf-8">
     <title>Главная - Нёрдс</title>
     <link rel="shortcut icon" href="favicon.ico" type="image/vnd.microsoft.icon">
     <link rel="stylesheet" href="css/normalize.css">
     <link href="css/style.css" type="text/css" rel="stylesheet">
+    <!--<link href="css/style.min.css" type="text/css" rel="stylesheet"> -->
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&amp;subset=cyrillic" rel="stylesheet">
   </head>
   <body>
@@ -100,7 +101,7 @@
         </div>
         <div class="features-statistics">
           <div class="features-logo">
-            <img src="img/nerds-illustration.png" alt="Логотип">
+            <img src="img/nerds-illustration.png" width="360" height="208" alt="Логотип">
           </div>
           <span class="features-table-title">C 2004 года любим точность во всем:</span>
           <table class="features-table">
@@ -125,6 +126,7 @@
           <li class="partner"><a href="#"><img src="img/logo-4.png" alt="Мишка" width="173" height="84"></a></li>
         </ul>
       </div>
+    </div>
   </main>
   <div class="address">
     <div class="address-map">
@@ -137,17 +139,16 @@
       <a href="#" class="button contacts-button">Напишите нам</a>
     </div>
   </div>
-  <div class="wrapper">
-    <footer class="footer">
-      <div class="footer-contacts">
-        <a href="#" class="footer-item footer-item-vk">Вконтакте</a>
-        <a href="#" class="footer-item footer-item-fb">Фейсбук</a>
-        <a href="#" class="footer-item footer-item-ig">Инстаграмм</a>
-      </div>
-      <div class="footer-text">
-        <p class="footer-text-slogan">Давайте дружить, это выгодно!</p>
-        <p class="footer-text-offer">Скидка 10% для друзей из социальных сетей.</p>
-      </div>
+    <footer class="footer wrapper">
+        <div class="footer-contacts">
+          <a href="#" class="footer-item footer-item-vk">Вконтакте</a>
+          <a href="#" class="footer-item footer-item-fb">Фейсбук</a>
+          <a href="#" class="footer-item footer-item-ig">Инстаграмм</a>
+        </div>
+        <div class="footer-text">
+          <p class="footer-text-slogan">Давайте дружить, это выгодно!</p>
+          <p class="footer-text-offer">Скидка 10% для друзей из социальных сетей.</p>
+        </div>
     </footer>
     <div class="modal">
       <div class="modal-wrp">
@@ -166,6 +167,6 @@
         </form>
       </div>
     </div>
-    <script src="js/modal.js"></script>
+    <script src="js/modal.min.js"></script>
   </body>
 </html>
