--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
   </header>
   <main class="main">
     <div class="slider">
+      <form name="slide">
       <div class="wrapper">
         <input type="radio" class="slider-input" id="btn-1" name="toggle" checked>
         <input type="radio" class="slider-input" id="btn-2" name="toggle">
@@ -41,6 +42,7 @@
           <label class="slider-dot slider-dot-active" for="btn-2"></label>
           <label class="slider-dot slider-dot-active" for="btn-3"></label>
         </div>
+        </form>
         <div class="slider-list">
           <div class="slider-item">
             <div class="slider-text">
