--- a/Catalog.html
+++ b/Catalog.html
@@ -59,21 +59,21 @@
               <label class="radio option">
                 <input class="radio-input" type="radio" name="grid" value="adaptive" checked>
                 <span class="radio-box"></span>
-                Адаптивная
+                <span class="radio-text">Адаптивная</span>
               </label>
             </li>
             <li class="filter-option">
               <label class="radio option">
-                <input class="radio-input" type="radio" name="grid" value="fixed">
+                <input class="radio-input" id="fix" type="radio" name="grid" value="fixed">
                 <span class="radio-box"></span>
-                Фиксированная
+                <span class="radio-text">Фиксированная</span>
               </label>
             </li>
             <li class="filter-option">
               <label class="radio option">
-                <input class="radio-input" type="radio" name="grid" value="rubber">
+                <input class="radio-input" type="radio" name="grid" value="rubber" disabled>
                 <span class="radio-box"></span>
-                Резиновая
+                <span class="radio-text">Резиновая</span>
               </label>
             </li>
           </ul>
@@ -83,30 +83,30 @@
           <ul>
             <li class="filter-color">
               <label class="check option">
-                <input class="check-input" type="checkbox" name="features" value="slider" checked>
+                <input class="check-input" type="checkbox" name="features" value="slider" checked disabled>
                 <span class="check-box"></span>
-                Слайдер
+                <span class="check-text">Слайдер</span>
               </label>
             </li>
             <li class="filter-color">
               <label class="check option">
                 <input class="check-input" type="checkbox" name="features" value="benefitsblock">
                 <span class="check-box"></span>
-                Блок преимуществ
+                <span class="check-text">Блок преимуществ</span>
               </label>
             </li>
             <li class="filter-color">
               <label class="check option">
                 <input class="check-input" type="checkbox" name="features" value="news" checked>
                 <span class="check-box"></span>
-                Новости
+                <span class="check-text">Новости</span>
               </label>
             </li>
             <li class="filter-color">
               <label class="check option">
                 <input class="check-input" type="checkbox" name="features" value="gallery">
                 <span class="check-box"></span>
-                Галерея
+                <span class="check-text">Галерея</span>
               </label>
             </li>
             <li class="filter-color">
