--- a/Catalog.html
+++ b/Catalog.html
@@ -71,7 +71,7 @@
             </li>
             <li class="filter-option">
               <label class="radio option">
-                <input class="radio-input" type="radio" name="grid" value="rubber" disabled>
+                <input class="radio-input" type="radio" name="grid" value="rubber">
                 <span class="radio-box"></span>
                 <span class="radio-text">Резиновая</span>
               </label>
@@ -83,7 +83,7 @@
           <ul>
             <li class="filter-color">
               <label class="check option">
-                <input class="check-input" type="checkbox" name="features" value="slider" checked disabled>
+                <input class="check-input" type="checkbox" name="features" value="slider" checked>
                 <span class="check-box"></span>
                 <span class="check-text">Слайдер</span>
               </label>
